<html>
  <head>
    <style type='text/css'>
      a            { color:#a0a0e0 }
      div.title    {
        color:#C0F0C0;
        font-size:1.2em;
        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 2.0
      % Version 2.0
      _ 2015-07-10
      * Abilty to add and remove remotes within the app! (Requires Abraboxabra version 2)
      * Reorganized UI
    $ 1.0
      % Version 1.0
      _ Initial release
	  * <a href="http://wp.me/p6raR-7m">Setup instructions</a>
    $ END_OF_CHANGE_LOG
  </body>
</html>